downgraded frontend from tailwindcss version 4 back to 3, countless breaks in function
